# ZenGlowNext

./: .copilot.md  .copilotignore  .easignore  .editorconfig  .env.example  .gitattributes  .gitignore  .wget-hsts  AI_BEHAVIOR_BLUEPRINT.md  App.js.legacy  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PROJECT_AUDIT_AND_CLEANUP_PLAN.md  Project_Index.md  Project_clean_up.md  README.md  STRUCTURE_ANALYSIS_REPORT.md  WORKFLOWS_DISABLED.md  ZenGlow.code-workspace  analyze-structure.sh  app.config.ts  app.json  check-deps.mjs  context.py  copilot.md  create_match_function.sql  cspell.json  demo_rag_pipeline.py  deps.py  docker-compose.ai.yml  docker-compose.yml  eas.json  eslint.config.cjs  file structure zenglow  gating.py  gradle_debug  hardening.md  import CardStack, { Card } from 'react-native-card  jest.config.js  (+15 more)
dev-indexer_1/: .dockerignore  .env.example  .env.redacted  .gitignore  .pre-commit-config.yaml  Architecture_OverView_  COPILOT.md  DEVOPS_TODO.md  DEVTODO.md  Dockerfile  Makefile  Phi3.5Jarvis.py  README.embedding.md  README.md  agregated_project_summary.md  bge_train_domain.py  conftest.py  dev-indexer_1.code-workspace  docker-compose.embedding-worker.yml  docker-compose.override.yml  docker-compose.yml  family_package_manifest.json  go.mod  pyproject.toml  pytest.ini  settings.json  sitecustomize.py  usercustomize.py
dev-indexer_1/.githooks/: pre-push
dev-indexer_1/.github/: copilot-instructions.md  labels.yml
dev-indexer_1/Untitled Folder/: 20250909_conversation_events.sql  artifact_a_schema.sql  artifact_personalization_schema.sql  colony_swarm_schema  event_logger.py  fdw_timescale_setup.sql  hybrid_retrieval_extended_schema.sql  inference_logging_schema.sql  ingestion.py  optimizer_pipeline.py  rag_client.py  rag_core_schema.sql  rag_indexes.sql  rag_ingest.py  rag_replay_watch.py  rag_training_example_builder.py  replay_msgpack_ingest.py  seed_domains.sql  segment_consumer.py  segment_processor.py  serve_embedding_model.py  serve_hf_embed.py  spool_watcher.py
(+891 files in other folders)
